# whisper-transcription-tool-gui

./: .gitignore  LICENCE  README.md  app_config.py  audio_extract.py  cuda_utils.py  dialogs.py  gui.py  install-uv.bat  install-uv.sh  language_utils.py  model_manager.py  output_utils.py  pyproject.toml  recorder.py  requirement.txt  run-app.bat  run-app.sh  style.py  update-app.bat  update-app.sh  whisper-transcription-tool-gui.bat  whisper-transcription-tool-gui.sh  whisper.bat  widgets.py  worker.py
